extends Control
@onready var refill_oil_button: Button = $"Refill Oil Button"
@onready var increase_max_oil_size_button: Button = $"Increase Max Oil Size Button"
@onready var decrease_the_oil_burn_rate_button: Button = $"Decrease The Oil Burn Rate Button"
@onready var increase_pickaxe_range_button: Button = $"Increase Pickaxe Range Button"
@onready var decrease_pickaxe_cooldown_button: Button = $"Decrease Pickaxe Cooldown Button"
@onready var increase_pickaxe_fortune_enchantment_button: Button = $"Increase Pickaxe Fortune Enchantment Button"


func _on_refill_oil_button_pressed() -> void:
	pass # Replace with function body.


func _on_increase_max_oil_size_button_pressed() -> void:
	pass # Replace with function body.


func _on_decrease_the_oil_burn_rate_button_pressed() -> void:
	pass # Replace with function body.


func _on_increase_pickaxe_range_button_pressed() -> void:
	pass # Replace with function body.


func _on_decrease_pickaxe_cooldown_button_pressed() -> void:
	pass # Replace with function body.


func _on_increase_pickaxe_fortune_enchantment_button_pressed() -> void:
	pass # Replace with function body.
